chore: bump version to v0.8.59
